--- a/SienceNet/src/app/dashboard/dashboard.component.html
+++ b/SienceNet/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="showStatus">
     <mat-toolbar id="dashboard-nav" color="primary">
-        <mat-icon>admin_panel_settings</mat-icon>
-        <span>Control Panel</span>
+        <mat-icon>wifi_tethering</mat-icon>
+        <span>SienceNET</span>
         <div class="example-button-row" style="margin-left: 5vw;">
             <a mat-button routerLink="index">главная</a>
             <a mat-button href="" target="_blank">статьи</a>
