--- a/SienceNet/src/app/index/index.component.html
+++ b/SienceNet/src/app/index/index.component.html
@@ -1,5 +1,5 @@
-<h1>SienceNetwdwd</h1>
+<h1>SienceNet</h1>
 
 <ul>
-    <li><a href="admin">Admin</a></li>
+    <li><a href="admin">Войти</a></li>
 </ul>
