--- a/SienceNet/src/app/dashboard/dashboard.component.html
+++ b/SienceNet/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,34 @@
 <section *ngIf="showStatus">
-    <mat-toolbar id="dashboard-nav" color="primary">
-        <mat-icon>wifi_tethering</mat-icon>
-        <span>SienceNET</span>
+    <mat-toolbar id="dashboard-nav" color="primary" fixedInViewport>
+        <mat-icon style="cursor: alias;">wifi_tethering</mat-icon>
+        <span style="cursor: alias;">SienceNET</span>
         <div class="example-button-row" style="margin-left: 5vw;">
-            <a mat-button routerLink="index">главная</a>
-            <a mat-button href="" target="_blank">статьи</a>
-            <a mat-button href="" target="_blank">видео</a>
-            <a mat-button href="" target="_blank">мероприятия</a>
+            <a mat-button routerLink="index">
+                <mat-icon>dashboard</mat-icon>
+            </a>
+            <a mat-button routerLink="messenger">
+                <mat-icon matBadge="10" [matBadgeHidden]="hidden" matBadgeColor="warn">chat</mat-icon>
+            </a>
+            <a mat-button routerLink="index">
+                <mat-icon>add_box</mat-icon>
+            </a>
         </div>
         <span class="example-spacer"></span>
-        <button mat-icon-button class="example-icon">
-          <mat-icon>account_circle</mat-icon>
-        </button>
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>account_circle</mat-icon>
+          </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item disabled>
+                <mat-icon>settings</mat-icon>
+                <span>Настройки</span>
+            </button>
+            <button (click)='logout()' mat-menu-item>
+                <mat-icon>power_off</mat-icon>
+                <span>Выйти</span>
+            </button>
+        </mat-menu>
     </mat-toolbar>
     <div id="dashboard-content">
-        <button (click)='logout()'>Logout</button>
         <router-outlet></router-outlet>
     </div>
 </section>
