--- a/SienceNet/src/app/dashboard/index/index.component.html
+++ b/SienceNet/src/app/dashboard/index/index.component.html
@@ -1,1 +1,17 @@
-index
+<mat-tab-group>
+    <mat-tab label="Профиль">
+        <div class="profile-content">
+            <div class="profile-header">
+                <div class="profile-avatar">
+                    <img src="https://www.vsmu.by/images/university/faculties/chairs/menedzement/shulminav.png" alt="">
+                </div>
+                <div class="profile-name">Шульмин Андрей Владимирович</div>
+            </div>
+            <div>
+                Резюме
+            </div>
+        </div>
+    </mat-tab>
+    <mat-tab label="Проекты"> Content 2 </mat-tab>
+    <mat-tab label="Статистика"> Content 3 </mat-tab>
+</mat-tab-group>
