--- a/SienceNet/src/app/dashboard/index/index.component.html
+++ b/SienceNet/src/app/dashboard/index/index.component.html
@@ -1,15 +1,60 @@
-<mat-tab-group>
+<mat-tab-group class="content-heigth">
     <mat-tab label="Профиль">
         <div class="profile-content">
-            <div class="profile-header">
-                <div class="profile-avatar">
-                    <img src="https://www.vsmu.by/images/university/faculties/chairs/menedzement/shulminav.png" alt="">
+            <div class="profile-grid">
+                <div class="profile-info">
+                    <div class="profile-info-inner">
+                        <div class="profile-info-avatar-wrapper">
+                            <img class="profile-info-avatar" src="https://sun2.dataix-by-minsk.userapi.com/impf/c851320/v851320410/1914c6/w2WeMiKmocg.jpg?size=400x0&quality=90&crop=394,0,2048,2048&sign=791072286db5816630deac2bae45a7c2&ava=1">
+                            <div class="profile-info-avatar-name">
+                                Миронов Владимир Олегович
+                            </div>
+                        </div>
+                        <div class="profile-info-box">
+                            <div class="profile-info-general">
+                                <div class="profile-info-item">
+                                    <mat-icon style="color: #3f51b5;">work</mat-icon>
+                                    <span style="padding-left: 0.5rem;">Студент</span>
+                                </div>
+                                <div class="profile-info-item">
+                                    <mat-icon style="color: #3f51b5;">phone</mat-icon>
+                                    <span style="padding-left: 0.5rem;">+375 (33) 389-60-71</span>
+                                </div>
+                                <div class="profile-info-item">
+                                    <mat-icon style="color: #3f51b5;">mail</mat-icon>
+                                    <span style="padding-left: 0.5rem;">zidiks228@gmail.com</span>
+                                </div>
+                            </div>
+                            <mat-divider></mat-divider>
+                            <div class="profile-info-general">
+                                <div class="profile-info-general-title">
+                                    <mat-icon style="color: #3f51b5;">verified</mat-icon>
+                                    <span style="padding-left: 0.5rem;">Навыки</span>
+                                </div>
+                                <div class="profile-info-item">
+                                    <mat-chip-list aria-label="Fish selection">
+                                        <mat-chip color="primary" selected>Фотография</mat-chip>
+                                        <mat-chip color="accent" selected>WEB-разработка</mat-chip>
+                                        <mat-chip color="primary" selected>Мат. анализ</mat-chip>
+                                        <mat-chip color="primary" selected>Графический дизайн</mat-chip>
+                                        <mat-chip color="primary" selected>Нейронные сети</mat-chip>
+                                    </mat-chip-list>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="profile-name">Шульмин Андрей Владимирович</div>
+                <div class="profile-content-inner">
+                    <div class="profile-content-inner-inner">
+                        <div class="profile-content-general">
+                            test
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-                Резюме
-            </div>
+
+
         </div>
     </mat-tab>
     <mat-tab label="Проекты"> Content 2 </mat-tab>
