--- a/SienceNet/src/app/dashboard/messenger/messenger.component.css
+++ b/SienceNet/src/app/dashboard/messenger/messenger.component.css
@@ -17,34 +17,6 @@
     overflow-y: scroll;
 }
 
-
-/* width */
-
-::-webkit-scrollbar {
-    width: 7px;
-}
-
-
-/* Track */
-
- ::-webkit-scrollbar-track {
-    background: #7683cc;
-}
-
-
-/* Handle */
-
- ::-webkit-scrollbar-thumb {
-    background: #3f51b5;
-}
-
-
-/* Handle on hover */
-
- ::-webkit-scrollbar-thumb:hover {
-    background: #3f51b5;
-}
-
 .interlocutions-list-avatar {
     background-color: burlywood;
     border-radius: 50%;
@@ -121,6 +93,11 @@
     border-radius: 50%;
     width: 2rem;
     height: 2rem;
+    overflow: hidden;
+}
+
+.user-avatar img {
+    width: 100%;
 }
 
 .chat-content-item {
