--- a/SienceNet/src/app/dashboard/messenger/messenger.component.html
+++ b/SienceNet/src/app/dashboard/messenger/messenger.component.html
@@ -69,7 +69,9 @@
                             <mat-list-item class="chat-content-item">
                                 <div class="chat-list-item-content chat-interlocutions-list">
                                     <div class="user-avatar-box">
-                                        <div class="user-avatar"></div>
+                                        <div class="user-avatar">
+                                            <img src="https://sun2.dataix-by-minsk.userapi.com/impf/c851320/v851320410/1914c6/w2WeMiKmocg.jpg?size=400x0&quality=90&crop=394,0,2048,2048&sign=791072286db5816630deac2bae45a7c2&ava=1">
+                                        </div>
                                     </div>
                                     <div class="user-message">Привет!
                                     </div>
