--- a/SienceNet/src/app/dashboard/index/index.component.html
+++ b/SienceNet/src/app/dashboard/index/index.component.html
@@ -5,24 +5,28 @@
                 <div class="profile-info">
                     <div class="profile-info-inner">
                         <div class="profile-info-avatar-wrapper">
-                            <img class="profile-info-avatar" src="https://sun2.dataix-by-minsk.userapi.com/impf/c851320/v851320410/1914c6/w2WeMiKmocg.jpg?size=400x0&quality=90&crop=394,0,2048,2048&sign=791072286db5816630deac2bae45a7c2&ava=1">
+                            <img class="profile-info-avatar" src="https://www.vsmu.by/images/university/faculties/chairs/menedzement/shulminav.png">
                             <div class="profile-info-avatar-name">
-                                Миронов Владимир Олегович
+                                Шульмин Андрей Владимирович
                             </div>
                         </div>
                         <div class="profile-info-box">
                             <div class="profile-info-general">
                                 <div class="profile-info-item">
+                                    <mat-icon style="color: #3f51b5;">account_circle</mat-icon>
+                                    <span class="profile-info-text">д.м.н. профессор</span>
+                                </div>
+                                <div class="profile-info-item">
                                     <mat-icon style="color: #3f51b5;">work</mat-icon>
-                                    <span style="padding-left: 0.5rem;">Студент</span>
+                                    <span class="profile-info-text">Заведующий кафедрой менеджмента и маркетинга фармации и ПК Витебского государственного ордена Дружбы народов медицинского университета</span>
                                 </div>
                                 <div class="profile-info-item">
                                     <mat-icon style="color: #3f51b5;">phone</mat-icon>
-                                    <span style="padding-left: 0.5rem;">+375 (33) 389-60-71</span>
+                                    <span class="profile-info-text">+375 (33) 312-81-40</span>
                                 </div>
                                 <div class="profile-info-item">
                                     <mat-icon style="color: #3f51b5;">mail</mat-icon>
-                                    <span style="padding-left: 0.5rem;">zidiks228@gmail.com</span>
+                                    <span class="profile-info-text">gydwin@bk.ru</span>
                                 </div>
                             </div>
                             <mat-divider></mat-divider>
@@ -48,7 +52,26 @@
                 <div class="profile-content-inner">
                     <div class="profile-content-inner-inner">
                         <div class="profile-content-general">
-                            test
+                            <div class="profile-content-general-title">
+                                <mat-icon style="color: #3f51b5;">grade</mat-icon>
+                                <span style="padding-left: 0.5rem;">Достижения</span>
+                            </div>
+                            <div class="profile-content-general-content">
+                                <p>Подготовка «Государственного доклада о состоянии здоровья и здравоохранения Красноярского края» (в течении 7 лет), разработка и проведение «Мониторинга деятельности муниципального здравоохранения» (с получением обобщенного
+                                    показателя продуктивности для муниципальных образований - 5 лет).</p>
+                                <p>Подготовка макета, дизайна и частичное наполнение «Стратегии развития Красноярского государственного медицинского университета им. проф. В. Ф. Войно-Ясенецкого на период с 2018-2025г. Постановка задач для написания компьютерных
+                                    программ анализа здоровья населения на территории Красноярского края, программы «Hospital» для краевой детской больницы. </p>
+                                <p>Защита кандидатской и докторской диссертаций, подготовил 3 кандидатов медицинских наук и одного доктора медицинских наук по направлению общественное здоровье и здравоохранение. Индекс Хирша - 10, по ядру РИНЦ – 3, участвовал
+                                    в написании 6 монографий (одна из которых в 2018 г. получила 1 место в университете).</p>
+                                <p>В 2016 году получен 1 дан карате-до Фудокан (черный пояс). Второе место по настольному теннису турнира 2019 года среди медицинских работников Красноярского края.</p>
+                            </div>
+                        </div>
+                        <div class="profile-content-general">
+                            <div class="profile-content-general-title">
+                                <mat-icon style="color: #3f51b5;">business_center</mat-icon>
+                                <span style="padding-left: 0.5rem;">Опыт работы</span>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -57,6 +80,24 @@
 
         </div>
     </mat-tab>
-    <mat-tab label="Проекты"> Content 2 </mat-tab>
+    <mat-tab label="Проекты">
+        <div class="profile-content-inner-inner">
+            <div class="profile-content-general">
+                <div class="profile-content-general-title">
+                    <mat-icon style="color: #3f51b5;">schedule</mat-icon>
+                    <span style="padding-left: 0.5rem;">Текущие</span>
+                </div>
+                <mat-card class="projs-card">Simple card
+                    <span class="example-spacer"></span> edit
+                </mat-card>
+                <div class="profile-content-general-title">
+                    <mat-icon style="color: #50bf72;">done_all</mat-icon>
+                    <span style="padding-left: 0.5rem;">Завершенные</span>
+                </div>
+                <mat-card class="projs-card closed-proj">Simple card</mat-card>
+                <mat-card class="projs-card closed-proj">Simple card</mat-card>
+            </div>
+        </div>
+    </mat-tab>
     <mat-tab label="Статистика"> Content 3 </mat-tab>
 </mat-tab-group>
