--- a/SienceNet/src/app/dashboard/messenger/messenger.component.css
+++ b/SienceNet/src/app/dashboard/messenger/messenger.component.css
@@ -119,3 +119,11 @@
     width: 100%;
     height: 100%;
 }
+
+.interlocutions-list mat-list-item {
+    font-family: Arial, Helvetica, sans-serif !important;
+}
+
+.chat-full-width input {
+    font-family: Arial, Helvetica, sans-serif !important;
+}
