upd: add srch experts

--- a/SienceNet/src/app/dashboard/dashboard.component.html
+++ b/SienceNet/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
             <a mat-button routerLink="messenger">
                 <mat-icon matBadge="10" [matBadgeHidden]="hidden" matBadgeColor="warn">chat</mat-icon>
             </a>
-            <a mat-button routerLink="index">
+            <a mat-button routerLink="addnew">
                 <mat-icon>add_box</mat-icon>
             </a>
         </div>
