feat: add serach resources

--- a/SienceNet/src/app/dashboard/dashboard.component.html
+++ b/SienceNet/src/app/dashboard/dashboard.component.html
@@ -12,6 +12,9 @@
             <a mat-button routerLink="addnew">
                 <mat-icon>add_box</mat-icon>
             </a>
+            <a mat-button routerLink="addnew">
+                <mat-icon>help_center</mat-icon>
+            </a>
         </div>
         <span class="example-spacer"></span>
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
