--- a/SienceNet/src/app/dashboard/addnew/addnew.component.html
+++ b/SienceNet/src/app/dashboard/addnew/addnew.component.html
@@ -6,18 +6,18 @@
                 <mat-icon style="color: #3f51b5; margin-right: 0.5rem;">all_inbox</mat-icon>Поиск ресурсов</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore expedita iure unde doloribus dignissimos quis inventore ea voluptates adipisci recusandae veritatis suscipit magni error quasi, corporis quisquam saepe, aliquid numquam.</p>
             <div class="example-spacer"></div>
-            <button disabled mat-raised-button color="primary">Поиск</button>
+            <button routerLink="resources" mat-raised-button color="primary">Поиск</button>
         </div>
         <div>
             <h2>
-                <mat-icon style="color: #3f51b5; margin-right: 0.5rem;">person_search</mat-icon>Поиск эксперта</h2>
+                <mat-icon style="color: #3f51b5; margin-right: 0.5rem;">person_search</mat-icon>Экспертная оценка</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore expedita iure unde doloribus dignissimos quis inventore ea voluptates adipisci recusandae veritatis suscipit magni error quasi, corporis quisquam saepe, aliquid numquam.</p>
             <div class="example-spacer"></div>
             <button routerLink="experts" mat-raised-button color="primary">Поиск</button>
         </div>
         <div>
             <h2>
-                <mat-icon style="color: #3f51b5; margin-right: 0.5rem;">create_new_folder</mat-icon>Создание проекта</h2>
+                <mat-icon style="color: #3f51b5; margin-right: 0.5rem;">create_new_folder</mat-icon>Реализация идеи</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore expedita iure unde doloribus dignissimos quis inventore ea voluptates adipisci recusandae veritatis suscipit magni error quasi, corporis quisquam saepe, aliquid numquam.</p>
             <div class="example-spacer"></div>
             <button disabled mat-raised-button color="primary">Создать</button>
