--- a/SienceNet/src/app/dashboard/dashboard.component.html
+++ b/SienceNet/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
             <a mat-button routerLink="addnew">
                 <mat-icon>add_box</mat-icon>
             </a>
-            <a mat-button routerLink="addnew">
+            <a mat-button routerLink="help">
                 <mat-icon>help_center</mat-icon>
             </a>
         </div>
